force-app/main/default/objects/Protocol_Option__c/Protocol_Option__c.object-meta.xml
<CustomObject>
    <label>Protocol Option</label>
    <nameField>
        <displayFormat>PO - {000000}</displayFormat>
        <label>Protocol Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protocol Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>