force-app/main/default/objects/Protocol_Option__c/fields/Protocol_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Item_Type__c</fullName>
    <label>Protocol Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>