force-app/main/default/objects/Protocol_Option__c/fields/Protocol_Option__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Option__c</fullName>
    <label>Protocol Option</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Protocol_Item_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incident - PI-MV-EE</fullName>
            </value>
            <value>
                <fullName>Incident - PI-MV-AO</fullName>
            </value>
            <value>
                <fullName>Incident - PI-EL-EE</fullName>
            </value>
            <value>
                <fullName>Incident - PI-PL-EE</fullName>
            </value>
            <value>
                <fullName>Claimant - PI-MV-EE</fullName>
            </value>
            <value>
                <fullName>Claimant - PI-MV-AO</fullName>
            </value>
            <value>
                <fullName>Claimant - PI-EL-EE</fullName>
            </value>
            <value>
                <fullName>Claimant - PI-PL-EE</fullName>
            </value>
            <value>
                <fullName>Defendant - PI-MV-EE</fullName>
            </value>
            <value>
                <fullName>Defendant - PI-MV-AO</fullName>
            </value>
            <value>
                <fullName>Defendant - PI-EL-EE</fullName>
            </value>
            <value>
                <fullName>Defendant - PI-PL-EE</fullName>
            </value>
            <value>
                <fullName>Case - PI-MV-EE</fullName>
            </value>
            <value>
                <fullName>Case - PI-MV-AO</fullName>
            </value>
            <value>
                <fullName>Case - PI-EL-EE</fullName>
            </value>
            <value>
                <fullName>Case - PI-PL-EE</fullName>
            </value>
            <value>
                <fullName>Case Arbribtration</fullName>
                <isActive>false</isActive>
                <label>Case Arbribtration</label>
            </value>
            <value>
                <fullName>Case EndtoEnd</fullName>
                <isActive>false</isActive>
                <label>Case EndtoEnd</label>
            </value>
            <value>
                <fullName>Claimant Arbitration</fullName>
                <isActive>false</isActive>
                <label>Claimant Arbitration</label>
            </value>
            <value>
                <fullName>Claimant EndtoEnd</fullName>
                <isActive>false</isActive>
                <label>Claimant EndtoEnd</label>
            </value>
            <value>
                <fullName>Defendant Arbitration</fullName>
                <isActive>false</isActive>
                <label>Defendant Arbitration</label>
            </value>
            <value>
                <fullName>Defendant EndtoEnd</fullName>
                <isActive>false</isActive>
                <label>Defendant EndtoEnd</label>
            </value>
            <value>
                <fullName>Incident Arbitration</fullName>
                <isActive>false</isActive>
                <label>Incident Arbitration</label>
            </value>
            <value>
                <fullName>Incident EndtoEnd</fullName>
                <isActive>false</isActive>
                <label>Incident EndtoEnd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>