force-app/main/default/objects/Protocol_Option__c/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <label>Record Type ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>