force-app/main/default/objects/Protocol_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Protocol_Item_Type__c</columns>
    <columns>Protocol_Option__c</columns>
    <columns>Record_Type_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>